--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
       <version>2.16.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.13</version> <!-- chọn version phù hợp -->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 
